proxy/src/snapshots/chronicle_proxy__testing__fixture_response@ollama_text_nonstreaming.snap
---
source: proxy/src/testing.rs
expression: response
---
{
  "request_info": {
    "id": "00000000-0000-0000-0000-000000000000",
    "provider": "ollama",
    "model": "me/a-test-model",
    "num_retries": 0,
    "was_rate_limited": false
  },
  "response_info": {
    "meta": {
      "eval_duration": 4889146000,
      "load_duration": 3278875,
      "prompt_eval_duration": 162740000
    },
    "model": "llama3"
  },
  "was_streaming": false,
  "num_chunks": 1,
  "response": {
    "created": 0,
    "model": "llama3",
    "system_fingerprint": null,
    "choices": [
      {
        "index": 0,
        "message": {
          "role": "assistant",
          "content": "A beloved topic!\n\nLassie is a fictional Rough Collie dog character created by Eric Knight in his 1940 novel \"Lassie Come-Home.\" The story follows a loyal and courageous golden-colored collie named Lassie, who loves her human family, particularly Timmy Martin. After being separated from her family during a tragic accident, Lassie embarks on an incredible journey to find them.\n\nThe character has since become a cultural icon through various adaptations:\n\n1. **Novels**: Eric Knight wrote six more \"Lassie\" novels between 1940 and 1957.\n2. **Films**: The first film, \"Lassie Come-Home,\" was released in 1943, followed by over 30 more movies featuring Lassie from the 1940s to the 1990s.\n3. **Television**: A popular TV series aired from 1954 to 1974, with a total of 574 episodes. The show starred Lassie as a loyal and heroic canine companion, often helping her human friends in need.\n4. **Radio**: Lassie had her own radio show, \"The Lassie Story,\" which ran from 1947 to 1953.\n\nThroughout the years, Lassie has become synonymous with loyalty, courage, and friendship, making her one of the most beloved and recognizable canine characters in popular culture."
        },
        "finish_reason": "stop"
      }
    ],
    "usage": {
      "prompt_tokens": null,
      "completion_tokens": 287,
      "total_tokens": null
    }
  }
}
