proxy/src/snapshots/chronicle_proxy__testing__fixture_response@openai_text_streaming.snap
---
source: proxy/src/testing.rs
expression: response
---
{
  "request_info": {
    "id": "00000000-0000-0000-0000-000000000000",
    "provider": "openai",
    "model": "me/a-test-model",
    "num_retries": 0,
    "was_rate_limited": false
  },
  "response_info": {
    "meta": null,
    "model": "gpt-3.5-turbo-0125"
  },
  "was_streaming": true,
  "num_chunks": 65,
  "response": {
    "created": 0,
    "model": "gpt-3.5-turbo-0125",
    "system_fingerprint": null,
    "choices": [
      {
        "index": 0,
        "message": {
          "role": "assistant",
          "content": "Lassie was a fictional Collie dog that originated in a short story called \"Lassie Come-Home\" written by Eric Knight in 1938. The character of Lassie has since appeared in numerous movies, television shows, and books, becoming a beloved and iconic character in popular culture."
        },
        "finish_reason": "stop"
      }
    ],
    "usage": {
      "prompt_tokens": 15,
      "completion_tokens": 62,
      "total_tokens": 77
    }
  }
}
